# ts570d

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Makefile  README.md
.claude/: settings.json  settings.local.json
.claude/agents/: app.md  architect.md  code_review.md  emulator.md  kenwood.md  serial.md  ui.md
.claude/commands/: architect.md  planning-with-files.md
.github/workflows/: ci.yml  release.yml
.opencode/agents/: app.md  architect.md  code_review.md  emulator.md  kenwood.md  serial.md  ui.md
.opencode/skills/rust/: SKILL.md
docs/: README.md  emulator.md  framework-refactor.md  refactor-status.md
docs/adr/: 0001-generic-cat-framework.md  0002-domain-types-in-radio.md  0003-single-command-table.md  0004-extraction-boundary.md  0005-network-transport-readiness.md  README.md
docs/architecture/: network-readiness.md
emulator/: Cargo.toml
emulator/src/: commands.rs  emulator.rs  io.rs  lib.rs  logger.rs  main.rs  port.rs  pty.rs  radio_state.rs  tui.rs
framework/: Cargo.toml
framework/src/: cat.rs  channels.rs  errors.rs  lib.rs  messages.rs  radio.rs  session.rs  state_machine.rs  test_support.rs  transport.rs
packaging/: build-deb.sh
packaging/DEBIAN/: control
radio/: Cargo.toml
radio/src/: client.rs  commands.rs  error.rs  lib.rs  radio_trait.rs  ts570d.rs  ts570d_radio.rs
radio/src/protocol/: framing.rs  frequency.rs  mod.rs  mode.rs  parser.rs  response.rs
radio/tests/: command_table.rs
serial/: Cargo.toml
serial/src/: io_uring.rs  lib.rs
src/: app.rs  lib.rs  main.rs
tests/: integration.rs
ui/: Cargo.toml
ui/src/: control.rs  diag.rs  layout.rs  lib.rs  terminal.rs
