[package]
name = "framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared infrastructure for TS-570D radio control"
rust-version.workspace = true

[dependencies]
# Async runtime (io_uring-based, Linux-only)
monoio = { workspace = true }
local-sync = { workspace = true }

# Async trait support (compatible with !Send futures for monoio)
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization for message types
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

[features]
default = []
