[package]
name = "radio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Kenwood TS-570D protocol handling"
rust-version.workspace = true

[dependencies]
# Local dependencies
framework = { path = "../framework" }

# Runtime
monoio = { workspace = true }

# Async traits
async-trait = "0.1"

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }

[features]
default = []
