[package]
name = "serial"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Custom io_uring RS-232 implementation for TS-570D"
rust-version.workspace = true

[dependencies]
# Core runtime
monoio = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
bytes = { workspace = true }
futures = { workspace = true }

# Linux-specific
libc = { workspace = true }
nix = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }

[features]
default = []