[package]
name = "serial"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Custom io_uring RS-232 implementation for TS-570D"
rust-version.workspace = true

[dependencies]
# Core runtime
monoio = { workspace = true }

# Framework Transport trait
framework = { path = "../framework" }

# Async trait support (compatible with !Send futures for monoio)
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Linux-specific
libc = { workspace = true }
nix = { workspace = true, features = ["term"] }

[dev-dependencies]
emulator = { path = "../emulator" }

[features]
default = []
