[package]
name = "ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ratatui terminal interface for TS-570D"
rust-version.workspace = true

[dependencies]
# Local dependencies
framework = { path = "../framework" }

# Async runtime
monoio = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Terminal UI (for framework interface definitions only)
ratatui = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]

[features]
default = []